2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>

	Warning: --prefix=/usr/GNUstep/System no longer works.  Please use
	--prefix=/usr/GNUstep or --with-system-root=/usr/GNUstep/System.
	* configure.ac: Simplified management of --prefix.  Do not try
	setting default prefix from an existing GNUSTEP_SYSTEM_ROOT as
	that is read from the config file after the default prefix is set.
	Do not set $prefix variable that it not used anywhere.  Fixed bug
	in setting GNUSTEP_SYSTEM_ROOT introduced in previous changes.
	* configure: Regenerated.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* .cvsignore: Ignore GNUstep.conf

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* configure.ac: Use the GNUSTEP_CONFIG_FILE environment variable
	to choose the location of the config file, if no configure option
	is given.  Automatically import the settings from an existing
	GNUstep config file if one exists, and use them for anything not
	specified.  Added --disable-importing-config-file option to
	disable this behaviour.
	* configure: Regenerated.	

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Added --with-system-root=xxx option.
	* configure: Regenerated.

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	
	Removed obsolete public variable GNUSTEP_ROOT.
	* configure.ac: Do not replace GNUSTEP_ROOT in generate files.
	* configure: Regenerated.
	* GNUstep.csh.in: Do not define GNUSTEP_ROOT.
	* GNUstep.sh.in: Do not define GNUSTEP_ROOT.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* configure.ac: Define GNUSTEP_SYSTEM_ROOT from prefix.  Export
	and reference it instead of exporting and referencing 'prefix' to
	clarify what is happening.  Reordered some configure stages to
	prepare it for further changes.
	* configure: Regenerated.
	* GNUmakefile.in: Use GNUSTEP_SYSTEM_ROOT instead of prefix.
	* GNUstep.csh.in: Same change.
	* GNUstep.sh.in: Same change.
	* GNUstep.conf.in: Same change.

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	