@@ -14,8 +14,6 @@ GNUSTEP_SYSTEM_ROOT=@GNUSTEP_SYSTEM_ROOT@
 GNUSTEP_LOCAL_ROOT=@GNUSTEP_LOCAL_ROOT@
 GNUSTEP_NETWORK_ROOT=@GNUSTEP_NETWORK_ROOT@
 
-# FIXME these needs doing still, special work to do on rationalizing
-# and standardizing user dirs and defaults
-#USER_GNUSTEP_DIR = GNUstep
-#USER_GNUSTEP_DEFAULTS = Defaults
-#USER_GNUSTEP_RC = .GNUsteprc
+GNUSTEP_USER_CONFIG_FILE=@GNUSTEP_USER_CONFIG_FILE@
+GNUSTEP_USER_DIR=@GNUSTEP_USER_DIR@
+GNUSTEP_USER_DEFAULTS_DIR=@GNUSTEP_USER_DEFAULTS_DIR@
