@@ -1,2 +1,0 @@
-GNUSTEP_USER_ROOT=@GNUSTEP_USER_ROOT@
-
